[package]
name = "clu"
version = "0.0.0-SNAPSHOT"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.42"
clap = { version = "3.0.0-beta.4" }
dotenv = "*"
thiserror = "1.0"
anyhow = "1.0"
git2 = "0.13.17"
async-process = "1.0"
futures = "0.3"
regex = "1.4"
toml = "0.5"
graphql_client = { version = "0.10" }
reqwest = { version = "0.11", features = ["json"] }