[package]
name = "clu"
version = "0.0.0-SNAPSHOT"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"]}
human-panic = "1"
dotenv = "*"
thiserror = "1"
anyhow = "1"
git2 = {version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }
async-process = "1"
futures = "0.3"
regex = "1.10"
toml = "0.8"
graphql_client = { version = "0.12" }
reqwest = { version = "0.12", features = ["json"] }
tracing-indicatif = "0.3.6"
indicatif = { version = "0.17.8", features = ["tokio", "futures"] }
